--- a/src/components/pages/cart-page/cart-page.styles.scss
+++ b/src/components/pages/cart-page/cart-page.styles.scss
@@ -1,4 +1,9 @@
-.cart-item {
+h1,
+.empty-cart {
+  text-align: center;
+}
+
+.cart-items {
   text-align: center;
   border: 1px solid #ccc;
   margin: 2rem;
@@ -40,18 +45,29 @@
       background-color: #d9534f;
     }
   }
+  .total-container {
+    margin: 2rem;
+    text-align: center;
 
-  @media (min-width: 1024px) {
-    .cart-item {
-      display: flex;
-      justify-content: space-between;
-      div {
-        margin: 1rem;
-      }
+    .total-container {
+      text-align: center;
+    }
+  }
+}
+@media (min-width: 1024px) {
+  .cart-page {
+    display: flex;
+    justify-content: center;
+  }
+  .cart-item {
+    display: flex;
+    justify-content: space-between;
+    div {
+      margin: 1rem;
+    }
 
-      .name-price {
-        width: 200px;
-      }
+    .name-price {
+      width: 200px;
     }
   }
 }
